syntax = "proto3";

package example.second;

option go_package = "github.com/an7one/tutorial/grpc_for_beginners/enum.pb";

message EnumMessage{
    int32 id = 1;
    Gender gender = 2;
}

enum Gender{
    option allow_alias = true;

    NOT_SPECIFIED = 0;
    WOMAN = 1;
    MAN = 2;

    FEMALE = 1;
    MALE = 2;
}